# STM32-MiniAutosar-by-Rust

./: .gitignore  Cargo.toml  GIAI_THICH_STARTUP.txt  README.md  build.rs  link.x
GPIO/: memory.x
GPIO/.cargo/: config.toml
GPIO/src/mcal/: mcu.rs  mod.rs  port.rs
GPIO/src/register/: dio.rs  gpio.rs  gpio_type.rs  mod.rs
docs/: ActivationSteps.md  Adc.md  Architecture.md  ComM.md  DevelopmentLog.md  Dio.md  Exti.md  GlobalData.md  Port.md  Scheduler.md  Spi.md  Startup.md  SysTick.md  Uart.md  Usart.md  UsartIf.md
src/: README.md  main.rs
src/app/: button_app.rs  led_app.rs  mod.rs  temperature_app.rs
src/bsw/: common_type.rs  mod.rs
src/bsw/cfg/: comm_cfg.rs  iohwab_sensor_cfg.rs  ioif_cfg.rs  mod.rs  scheduler_cfg.rs  usartif_cfg.rs
src/bsw/iohwab/: button.rs  iohwab_type.rs  led.rs  mod.rs  sensor.rs
src/bsw/ioif/: ioif.rs  ioif_cfg.rs  ioif_rx.rs  ioif_tx.rs  ioif_type.rs  mod.rs
src/bsw/management/: mod.rs
src/bsw/services/: mod.rs  scheduler.rs  scheduler_type.rs
src/bsw/usartif/: mod.rs  usartif_rx.rs  usartif_tx.rs  usartif_type.rs
src/mcal/: dio.rs  dio_type.rs  exti.rs  exti_type.rs  interrupcallback.rs  mod.rs  port.rs  std_type.rs
src/mcal/cfg/: adc_cfg.rs  dio_cfg.rs  exti_cfg.rs  mcp2515_cfg.rs  mod.rs  port_cfg.rs  spi_cfg.rs  usart_cfg.rs
src/mcal/src/: adc.rs  dio.rs  exti.rs  interrupcallback.rs  mcu.rs  port.rs  spi.rs  uart.rs  usart.rs
src/mcal/type/: adc_type.rs  (+6 more)
src/register/: dio.rs  exti.rs  exti_type.rs  gpio_type.rs  mod.rs  nvic.rs  rcc_type.rs  syscfg.rs  syscfg_type.rs
src/startup/: mod.rs  vector_table.rs
(+22 files in other folders)
